--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">funteam</string>
+    <string name="first_name_hint">First Name</string>
+    <string name="last_name_hint">Last Name</string>
+    <string name="email_hint">Email</string>
+    <string name="username_hint">Username</string>
+    <string name="signup">SIGN UP</string>
+    <string name="terms">By pressing \'SIGN UP\' you agree to our terms and conditions</string>
+    <string name="log_in">LOG IN</string>
+    <string name="groups_coming_soon">GROUPS COMING SOON!</string>
+    <string name="settings_coming_soon">SETTINGS COMING SOON!</string>
+    <string name="profile_coming_soon">PROFILE COMING SOON!</string>
 </resources>
