--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,13 @@
     <string name="name">Name</string>
     <string name="have_account">Already have an account?</string>
     <string name="sign_out">SIGN OUT</string>
+    <string name="join_group">JOIN GROUP</string>
+    <string name="create_group">CREATE GROUP</string>
+    <string name="you">ME: </string>
+    <string name="colorName">#EF9E73</string>
+    <string name="choose_meme">Choose Meme</string>
+    <string name="post">POST</string>
+    <string name="no_blank">You cannot send blank message</string>
+    <string name="upload_successful">Upload Successful</string>
+    <string name="upload_failed">Upload Failed</string>
 </resources>
